# temoto_component_manager

./: README.md
actions/ta_find_component_packages/: CMakeLists.txt  descriptor.xml  package.xml  umrf.json
actions/ta_find_component_packages/include/ta_find_component_packages/: macros.h  temoto_action.h
actions/ta_find_component_packages/src/: ta_find_component_packages.cpp
actions/ta_find_component_pipes/: CMakeLists.txt  descriptor.xml  package.xml  umrf.json
actions/ta_find_component_pipes/include/ta_find_component_pipes/: macros.h  temoto_action.h
actions/ta_find_component_pipes/src/: ta_find_component_pipes.cpp
temoto_component_manager/: CMakeLists.txt  README.md  package.xml
temoto_component_manager/config/: action_dst.yaml
temoto_component_manager/include/temoto_component_manager/: component_info.h  component_info_registry.h  component_manager_interface.h  component_manager_servers.h  component_manager_services.h  component_manager_yaml.h  component_snooper.h  pipe_info.h
temoto_component_manager/msg/: Component.msg  Pipe.msg  PipeSegment.msg  PipeSegmentSpecifier.msg
temoto_component_manager/src/: component_info.cpp  component_info_registry.cpp  component_manager_node.cpp  component_manager_servers.cpp  component_snooper.cpp
temoto_component_manager/srv/: ListComponents.srv  ListPipes.srv  LoadComponent.srv  LoadPipe.srv
