<?xml version="1.0"?>
<package>
  <name>temoto_component_manager</name>
  <version>2.0.1</version>
  <description>The temoto_component_manager package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
	<build_depend>message_generation</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>temoto_core</build_depend>
  <build_depend>temoto_action_engine</build_depend>
  <build_depend>temoto_er_manager</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>temoto_core</run_depend>
  <run_depend>temoto_action_engine</run_depend>
  <run_depend>temoto_er_manager</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
