<?xml version="1.0"?>
<package format="2">
  <name>temoto_component_manager</name>
  <version>2.0.1</version>
  <description>The temoto_component_manager package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
	<depend>message_generation</depend>
  <!--depend>yaml-cpp</depend-->
  <depend>temoto_core</depend>
  <depend>temoto_action_engine</depend>
  <depend>temoto_er_manager</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <rosdoc config="rosdoc.yaml"/> -->
  </export>
</package>
